Style Guide Corrections (radio buttons, spacing, nav buttons, img size)

--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -16,13 +16,6 @@
 	justify-content: space-around;
 }
 
-
-.box-item-nav {
-	-webkit-flex: 1 1 auto;
-	-ms-flex: 1 1 auto;
-	flex: 1 1 auto;
-}
-
 .box-item-image {
 	-webkit-flex: 3 1 400px;
 	-ms-flex: 3 1 400px;
